[package]
name = "braille_pics"
authors = "Christopher Phan"
repository = "https://github.com/christopherphan/braille_pics"
license = "MIT OR Apache-2.0"
description = "A library for producing text-art pictures using Braille characters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
